--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,3 +26,24 @@ mat-dialog-container {
 .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
   background-color: #17a2b8;
 }
+
+.mat-radio-outer-circle {
+  box-sizing: border-box;
+    height: 16px !important;
+    width: 16px !important;
+}
+
+.mat-radio-inner-circle {
+  height: 16px !important;
+  width: 16px !important;
+}
+
+.mat-checkbox-inner-container {
+  height: 14px !important;
+  width: 14px !important;
+}
+
+.mat-radio-container {
+  width: 16px !important;
+  height: 16px !important;
+}
