last build before

--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -60,6 +60,7 @@ $topnav-background-color: #222;
     display: block;
     margin: auto;
     margin-bottom: 4px;
+    border-bottom: 2px solid grey;
     text-align: center;
     text-decoration: underline;
 }
