--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -1,18 +1,42 @@
 .info-bar {
     padding: 8px;
-    background: #17a2b8;
+    background: #09b5d0;
     color: white;
-    border-radius: 32px;
+    border-radius: 4px;
+}
+.box-class {
+    height: 100vh;
 }
 
 .ques-text {
     display: block;
     margin: 4px;
+    height: 70vh;
     padding: 24px;
+    border: 2px solid #d0cdcd;
+    border-radius: 6px;
+    overflow: auto;
     // border: 2px solid grey;
+}
+.pre-class {
+    font-weight: 600;
+    overflow: unset;
+
+}
+.ques-image {
+    text-align: center;
+    padding: 18px;
+    max-width: 300px;
+    max-height: 300px;
+}
+.choice-image {
+    display: inline-block;
+    text-align: center;
+    padding: 18px;
 }
 
 .option-section {
+    font-size: 14px;
     display: block;
     padding: 12px;
     margin-top: 8px;
@@ -20,6 +44,10 @@
 
 .opt-text {
     display: block;
+}
+.action-btn {
+    background: #dee2e6;
+    border-radius: 4px;
 }
 .prev-btn {
     adding: 2px;
@@ -51,3 +79,6 @@
     min-width: 180px;
     background: #28a745;
 }
+.cke_bottom {
+    display: none !important;
+  }
