last complete project commit 15/12/19

--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,4 +1,4 @@
-<div class="instructions-page" [@routerTransition]>
+<div class="instructions-page">
     <mat-card class="details-card">
         <mat-card-header>
           <mat-card-title>Candidate Detail</mat-card-title>
