--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div [@routerTransition]>
+<div>
   <div class="info-bar">
     <span>Information : </span> &nbsp; <span *ngIf="quesData.ques_type_id == 1"> Question Type : Single Choice, </span> &nbsp;
     <span *ngIf="quesData.ques_type_id == 2"> Question Type : Multiple Choice, </span>
