--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -48,6 +48,7 @@
                 <li class="list-group-item">10) <img src="assets/images/visited.png"> Yellow : You have read the question, option unmarked</li>
                 <li class="list-group-item">11) <img src="assets/images/savedques.png"> Green : Your response is submitted</li>
                 <li class="list-group-item">12) <img src="assets/images/unvisited.png"> Gray : Question not attended</li>
+                <li class="list-group-item">13) <img src="assets/images/unanswered.png"> Red : Question attended but not answered</li>
               </ul>
             </div>
           </div>
