--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class=footer>
     <div class="pwd-by">
-        Powered by Ankit Sharma & Md Soaib Khan | <span class="material-icons icon-size">
+        Designed & Developed by Ankit Sharma & Md Soaib Khan | <span class="material-icons icon-size">
             copyright
         </span> All Rights Reserved
     </div>
