--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-page" [@routerTransition]>
   <div class="login-background">
     <div class="bg-overlay">
-      <!-- <div class="login-header">
-        <p>Computer Based Exam System <span class="superscript"><sup>(Beta version 0.1)</sup></span></p>
-      </div> -->
+      <div class="login-header">
+        <p>Scholastic Grilling <span class="subscript"><sub style="font-size: 48%;">~Testing your prowess (Beta version 0.1)</sub></span></p>
+      </div>
       <div class="col-md-4 top-pad">
         <div class="card">
           <div class="card-header">Login</div>
